# mirza.local

./: README.md  flawinmycode.md  flow.md  installation.sh  readmeFR.md
docs/: MCP_ROADMAP.md
llmServe/: deploy_llama.py  pyproject.toml  serve_llama.py
mirza/: gatcha.sh  gen_config.sh  mirza.conf  mirza.sh
mirzaServer/ai/: models.json  setup_mlx.sh
mirzaServer/monitoring/: setup_monitoring.sh  🍎 Mirza Monitor Lite-1775780160755.json
mirzaServer/utils/: .zshrc  baptism.sh
scratch/: deploy_llama.py  serve_llama.py  start_stack.sh
webui/: app.js  index.html  serve.sh  server.py  style.css
